--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - static-data:/vol/web/static
       - media-data:/vol/web/media
+      - ./default.conf:/etc/nginx/conf.d/default.conf
         
      
     environment:
@@ -34,12 +35,14 @@ services:
   proxy:
     build:
       context: ./proxy
+           
     restart: always
     depends_on:
       - app
     ports:
       - 80:8000
     volumes:
+      - ./default.conf:/etc/nginx/conf.d/default.conf
       - static-data:/vol/static
       - media-data:/vol/media
 
