--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -31,7 +31,7 @@ jobs:
     name: Terraform
     runs-on: ubuntu-22.04
     steps:
-      - name: Login to Docker Hub
+      - name: msaeed85
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
