--- a/Infra/docker-compose.yaml
+++ b/Infra/docker-compose.yaml
@@ -1,24 +1,18 @@
 services:
   terraform:
-<<<<<<< HEAD
-    image:  hashicorp/terraform:1.6.2
+    image: hashicorp/terraform:1.6.2
     volumes:
       - ./setup:/tf/setup
       - ./setup:/tf/deploy
-    working_dir: /tf
+      - /home/msaeed/.aws:/root/.aws:ro  # optional: read-only
+    working_dir: /tf             # likely intended working directory
     environment:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_SESSION_TOKEN=${AWS_SESSION_TOKEN}
       - AWS_DEFAULT_REGION=us-east-1
       - TF_WORKSPACE=${TF_WORKSPACE}
-=======
-    image: hashicorp/terraform:1.6.2
-    volumes:
-      - ./setup:/tf/setup
-      - ./setup:/tf/deploy
-      - /home/msaeed/.aws:/root/.aws
-    working_dir: /tf
-    env_file:
-      - .env
->>>>>>> 7387735 (Initial clean commit)
+      - TF_VAR_db_password=${TF_VAR_db_password}
+      - TF_VAR_django_secret_key=${TF_VAR_django_secret_key}
+      - TF_VAR_ecr_proxy_image=${TF_VAR_ecr_proxy_image}
+      - TF_VAR_ecr_app_image=${TF_VAR_ecr_app_image}
