--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,3 +32,13 @@ Terraform Checks:
     - docker compose run --rm terraform -chdir=deploy/ fmt -check
   rules:
     - if: "$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^(main|prod)$/ || $CI_COMMIT_BRANCH =~ /^(main|prod)$/"
+
+Build and Push to ECR:
+  stage: Build and Push
+  script:
+    - export IMAGE_URI="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${IMAGE_TAG}"
+    - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com
+    - docker build -t $IMAGE_URI .
+    - docker push $IMAGE_URI
+  rules:
+    - if: "$CI_COMMIT_BRANCH == 'main'"
