--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,9 @@ Deploy to AWS:
   script: |
     - echo "💬 Using workspace: $CI_COMMIT_BRANCH"
     - aws --version
+    - echo "AWS_ACCOUNT_ID: $AWS_ACCOUNT_ID"
+    - echo "ECR_REPO_APP: $ECR_REPO_APP"
+    - echo "ECR_REPO_PROXY: $ECR_REPO_PROXY"
     - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
     - docker build -t $ECR_REPO_APP:$CI_COMMIT_SHA .
     - docker push $ECR_REPO_APP:$CI_COMMIT_SHA
@@ -53,3 +56,4 @@ Deploy to AWS:
     - docker compose run --rm terraform -chdir=deploy/ apply -auto-approve
   rules:
     - if: "$CI_COMMIT_BRANCH =~ /^(main|prod)$/"
+
