--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,14 +34,19 @@ Terraform Checks:
 
 Deploy to AWS:
   image: docker:latest
-  stage: Deploy
+  stage: deploy
   services:
     - docker:24.0-dind
   variables:
     DOCKER_DRIVER: overlay2
     AWS_DEFAULT_REGION: us-east-1
   before_script:
-    - apk add --no-cache python3 py3-pip
+    # Install unzip and curl
+    - apk add --no-cache curl unzip
+    # Download AWS CLI v2
+    - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+    - unzip awscliv2.zip
+    - ./aws/install
     - aws --version
     - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
   script:
@@ -57,4 +62,4 @@ Deploy to AWS:
     - docker compose run --rm terraform -chdir=deploy/ workspace select -or-create $CI_COMMIT_BRANCH
     - docker compose run --rm terraform -chdir=deploy/ apply -auto-approve
   rules:
-    - if: "$CI_COMMIT_BRANCH =~ /^(main|prod)$/"
+    - if: '$CI_COMMIT_BRANCH =~ /^(main|prod)$/'
