--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,15 @@
 image:
-  name: docker:24.0
+  name: docker:19.03.5
 
 services:
-  - docker:24.0-dind
+  - docker:19.03.5-dind
 
 before_script:
   - echo "$DOCKERHUB_TOKEN" | docker login --username $DOCKERHUB_USER --password-stdin
 
 stages:
   - Test and Lint
-  - Deploy
+  - Build and Push
 
 Python Checks:
   stage: Test and Lint
@@ -32,34 +32,21 @@ Terraform Checks:
   rules:
     - if: "$CI_COMMIT_BRANCH =~ /^(main|prod)$/"
 
-Deploy to AWS:
-  image: docker:latest
-  stage: deploy
+Build and Push:
+  image: docker:19.03.5
   services:
-    - docker:24.0-dind
-  variables:
-    DOCKER_DRIVER: overlay2
-    AWS_DEFAULT_REGION: us-east-1
-  before_script:
-    # Install unzip and curl
-    - apk add --no-cache curl unzip
-    # Download AWS CLI v2
-    - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-    - unzip awscliv2.zip
-    - ./aws/install
-    - aws --version
-    - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+    - docker:19.03.5-dind
+  stage: Build and Push
   script:
-    - echo "main:$CI_COMMIT_BRANCH"
-    - docker build -t $ECR_REPO_APP:$CI_COMMIT_SHA .
-    - docker push $ECR_REPO_APP:$CI_COMMIT_SHA
-    - docker build -t $ECR_REPO_PROXY:$CI_COMMIT_SHA proxy/
-    - docker push $ECR_REPO_PROXY:$CI_COMMIT_SHA
-    - export TF_VAR_ecr_app_image="$ECR_REPO_APP:$CI_COMMIT_SHA"
-    - export TF_VAR_ecr_proxy_image="$ECR_REPO_PROXY:$CI_COMMIT_SHA"
-    - cd infra/
-    - docker compose run --rm terraform -chdir=deploy/ init
-    - docker compose run --rm terraform -chdir=deploy/ workspace select -or-create $CI_COMMIT_BRANCH
-    - docker compose run --rm terraform -chdir=deploy/ apply -auto-approve
+    - echo "Build and Push Docker image"
+    - apk add python3
+    - pip3 install awscli
+    - docker build --compress -t $ECR_REPO:$CI_COMMIT_SHORT_SHA .
+    - $(aws ecr get-login --no-include-email --region us-east-1)
+    - docker push $ECR_REPO:$CI_COMMIT_SHORT_SHA
+    - docker tag $ECR_REPO:$CI_COMMIT_SHORT_SHA $ECR_REPO:latest
+    - docker push $ECR_REPO:latest
   rules:
-    - if: '$CI_COMMIT_BRANCH =~ /^(main|prod)$/'
+    - if: '$CI_COMMIT_BRANCH =~ /^(master|production)$/'
+
+  
