--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,36 +1,37 @@
+
 image:
-  name: docker:19.03.5
-
-services:
-  - docker:19.03.5-dind
-
-before_script:
-  - echo "$DOCKERHUB_TOKEN" | docker login --username $DOCKERHUB_USER --password-stdin
+  name: hashicorp/terraform:0.12.21
+  entrypoint:
+    - '/usr/bin/env'
+    - 'PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'
 
 stages:
   - Test and Lint
   - Build and Push
 
-Python Checks:
+Test and Lint:
+  image: docker:19.03.5
+  services:
+    - docker:19.03.5-dind
   stage: Test and Lint
   script:
-    - docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
-    - docker compose run --rm app sh -c "flake8"
+    - echo "Test and Lint"
+    - apk add python3-dev libffi-dev openssl-dev gcc libc-dev make
+    - pip3 install docker-compose
+    - docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test && flake8"
   rules:
-    - if: "$CI_COMMIT_BRANCH =~ /^(main|prod)$/"
+    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^(master|production)$/ || $CI_COMMIT_BRANCH =~ /^(master|production)$/'
 
-Terraform Checks:
+Validate Terraform:
   stage: Test and Lint
   script:
-    - cd infra/
-    - docker compose run --rm terraform -chdir=deploy/ init -backend=false
-    - docker compose run --rm terraform -chdir=setup/ init -backend=false
-    - docker compose run --rm terraform -chdir=setup/ validate
-    - docker compose run --rm terraform -chdir=setup/ fmt -check
-    - docker compose run --rm terraform -chdir=deploy/ validate
-    - docker compose run --rm terraform -chdir=deploy/ fmt -check
+    - echo "Validate Terraform"
+    - cd deploy/
+    - terraform init -backend=false
+    - terraform validate
+    - terraform fmt -check
   rules:
-    - if: "$CI_COMMIT_BRANCH =~ /^(main|prod)$/"
+    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^(master|production)$/ || $CI_COMMIT_BRANCH =~ /^(master|production)$/'
 
 Build and Push:
   image: docker:19.03.5
@@ -48,5 +49,3 @@ Build and Push:
     - docker push $ECR_REPO:latest
   rules:
     - if: '$CI_COMMIT_BRANCH =~ /^(master|production)$/'
-
-  
