--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,49 +1,48 @@
-
+---
 image:
-  name: docker:19.03.5
- 
+  name: docker:24.0
+
+services:
+  - docker:24.0-dind
+
+before_script:
+  - echo "$DOCKERHUB_TOKEN" | docker login --username $DOCKERHUB_USER --password-stdin
 
 stages:
   - Test and Lint
   - Build and Push
+  - Deploy
+  
 
-Test and Lint:
-  image: docker:19.03.5
-  services:
-    - docker:19.03.5-dind
+Python Checks:
   stage: Test and Lint
   script:
-    - echo "Test and Lint"
-    - apk add python3-dev libffi-dev openssl-dev gcc libc-dev make
-    - pip3 install docker-compose
-    - docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test && flake8"
+    - docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
+    - docker compose run --rm app sh -c "flake8"
   rules:
-    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^(master|production)$/ || $CI_COMMIT_BRANCH =~ /^(master|production)$/'
+    - if: "$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^(main|prod)$/ || $CI_COMMIT_BRANCH =~ /^(main|prod)$/"
 
-Validate Terraform:
+Terraform Checks:
   stage: Test and Lint
   script:
-    - echo "Validate Terraform"
-    - cd deploy/
-    - terraform init -backend=false
-    - terraform validate
-    - terraform fmt -check
+    - cd infra/
+    - docker compose run --rm terraform -chdir=deploy/ init -backend=false
+    - docker compose run --rm terraform -chdir=setup/ init -backend=false
+    - docker compose run --rm terraform -chdir=setup/ validate
+    - docker compose run --rm terraform -chdir=setup/ fmt -check
+    - docker compose run --rm terraform -chdir=deploy/ validate
+    - docker compose run --rm terraform -chdir=deploy/ fmt -check
   rules:
-    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^(master|production)$/ || $CI_COMMIT_BRANCH =~ /^(master|production)$/'
+    - if: "$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^(main|prod)$/ || $CI_COMMIT_BRANCH =~ /^(main|prod)$/"
 
-Build and Push:
-  image: docker:19.03.5
-  services:
-    - docker:19.03.5-dind
+Push to ECR:
   stage: Build and Push
   script:
-    - echo "Build and Push Docker image"
-    - apk add python3
-    - pip3 install awscli
-    - docker build --compress -t $ECR_REPO:$CI_COMMIT_SHORT_SHA .
-    - $(aws ecr get-login --no-include-email --region us-east-1)
-    - docker push $ECR_REPO:$CI_COMMIT_SHORT_SHA
-    - docker tag $ECR_REPO:$CI_COMMIT_SHORT_SHA $ECR_REPO:latest
-    - docker push $ECR_REPO:latest
+    - apk update && apk add aws-cli
+    - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com
+    - docker build --compress -t $ECR_REPO_APP:$CI_COMMIT_SHA .
+    - docker push $ECR_REPO_APP:$CI_COMMIT_SHA
+    - docker build --compress -t $ECR_REPO_PROXY:$CI_COMMIT_SHA proxy/
+    - docker push $ECR_REPO_PROXY:$CI_COMMIT_SHA
   rules:
-    - if: '$CI_COMMIT_BRANCH =~ /^(master|production)$/'
+    - if: "$CI_COMMIT_BRANCH =~ /^(main|prod)$/"
